--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <label class="label">
                               <span class="label-text">Digit Pin</span>
                             </label>
-                            <input type="password" placeholder="Enter Digit Pin" class="input input-bordered" autocomplete="off"  required />
+                            <input id="pin-number" type="password" placeholder="Enter Digit Pin" class="input input-bordered" autocomplete="off"  required />
                             <!-- <label class="label">
                               <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                             </label> -->
