--- a/home.html
+++ b/home.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payoo Home Page</title>
+   <title>Payoo Home Page</title>
+   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+   <script src="https://cdn.tailwindcss.com"></script>
+   
 </head>
 <body>
-    
+    <main class="flex justify-center">
+        <div class="mockup-phone">
+            <div class="camera"></div>
+            <div class="display">
+              <div class="artboard artboard-demo phone-3">
+                <!-- available balance --> 
+                <div>
+                    <div class="stats shadow">
+                        <div class="stat">
+                          <div class="stat-value">89000</div>
+                          <div class="stat-desc">Available Balance</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="divider"></div>
+            <!-- user button -->
+             <div>
+                <button class="btn btn-lg">Add Money</button>
+                <button class="btn btn-lg">Cashout</button>
+             </div>
+             <div class="divider"></div>
+             <!-- add money start -->
+             <div class="hero bg-base-200 min-h-screen">
+                <div class="hero-content flex-col">
+                  
+                  <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <form class="card-body">
+                      <div class="form-control">
+                        <label class="label">
+                          <span class="label-text">Amount to Add</span>
+                        </label>
+                        <input id="phone-number" type="text" placeholder="Add Amount to withdraw" class="input input-bordered" required />
+                      </div>
+                      <div class="form-control">
+                        <label class="label">
+                          <span class="label-text">Pin Number</span>
+                        </label>
+                        <input id="pin-number" type="password" placeholder="Enter 4 digit pin number" class="input input-bordered" autocomplete="off"  required />
+                        <!-- <label class="label">
+                          <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
+                        </label> -->
+                      </div>
+                      <div class="form-control mt-6">
+                        <button id="button-login" class="btn btn-primary">Add Money</button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <!-- add money end -->
+              </div>
+            </div>
+          </div>
+    </main>
+    <script src="js/home.js"></script>
 </body>
 </html>
