added add money to event handler

--- a/home.html
+++ b/home.html
@@ -40,19 +40,19 @@
                         <label class="label">
                           <span class="label-text">Amount to Add</span>
                         </label>
-                        <input id="phone-number" type="text" placeholder="Add Amount to withdraw" class="input input-bordered" required />
+                        <input id="amount-number" type="text" placeholder="Add Amount to withdraw" class="input input-bordered" required />
                       </div>
                       <div class="form-control">
                         <label class="label">
                           <span class="label-text">Pin Number</span>
                         </label>
-                        <input id="pin-number" type="password" placeholder="Enter 4 digit pin number" class="input input-bordered" autocomplete="off"  required />
+                        <input id="digit-number" type="password" placeholder="Enter 4 digit pin number" class="input input-bordered" autocomplete="off"  required />
                         <!-- <label class="label">
                           <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                         </label> -->
                       </div>
                       <div class="form-control mt-6">
-                        <button id="button-login" class="btn btn-primary">Add Money</button>
+                        <button id="button-add-money" class="btn btn-primary">Add Money</button>
                       </div>
                     </form>
                   </div>
