added the new balance for the amount

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
                 <div>
                     <div class="stats shadow">
                         <div class="stat">
-                          <div class="stat-value">89000</div>
+                          <div id="balance" class="stat-value">89000</div>
                           <div class="stat-desc">Available Balance</div>
                         </div>
                     </div>
