added show  cashout button and add money button

--- a/home.html
+++ b/home.html
@@ -26,12 +26,12 @@
                 <div class="divider"></div>
             <!-- user button -->
              <div>
-                <button class="btn btn-lg">Add Money</button>
-                <button class="btn btn-lg">Cashout</button>
+                <button id="show-add-money" class="btn btn-lg">Add Money</button>
+                <button id="show-cashout" class="btn btn-lg">Cashout</button>
              </div>
              <div class="divider"></div>
              <!-- add money start -->
-             <div class="hidden hero bg-base-200 min-h-screen">
+             <div id="add-money-from" class="hero bg-base-200 min-h-screen">
                 <div class="hero-content flex-col">
                   <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
@@ -56,7 +56,7 @@
               </div>
               <!-- add money end -->
                <!-- cashout start here -->
-               <div class="hero bg-base-200 min-h-screen">
+               <div id="cashout-from" class="hidden hero bg-base-200 min-h-screen">
                 <div class="hero-content flex-col">
                   <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
@@ -86,5 +86,6 @@
     </main>
     <script src="js/home.js"></script>
     <script src="js/cashout.js"></script>
+    <script src="js/features.js"></script>
 </body>
 </html>
